# bookshelf

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
app/: Cargo.toml
app/src/: app.rs  config.rs  main.rs
app/src/cli/: clap.rs  entry.rs  mod.rs
app/src/tui/: events.rs  mod.rs  state.rs  ui.rs
app/src/utils/: format.rs
cli/: Cargo.toml
cli/src/: entry.rs  main.rs
lib/: Cargo.toml
lib/src/: config.rs  entry.rs  lib.rs  shelf.rs  tag.rs
tui/: Cargo.toml
tui/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs  test.rs
