[package]
name = "bookshelf"
description = "Your personal bookshelf and a bit more"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Kirillov <kirusfg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib/" }
clap = { version = "3.1.18", features = ["cargo"] }
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
config = "0.13.1"
directories = "4.0.1"
biblatex = "0.6.2"
shellexpand = "2.1.0"
open = { git = "https://github.com/kirusfg/open-rs", branch = "main" }
tui = "0.18"
crossterm = "0.23"

[dev-dependencies]
utils = { path = "../utils/" }
